<resources>
    <string name="app_name">Tiểu Thuyết</string>
    <string name="is_loading_txt">Đang tải...</string>
    <string name="permissions_txt">Để sử dụng ứng dụng, bạn phải có các quyền sau đây!</string>
    <string name="permissions_error_txt">Bạn đã từ chối cung cấp quyền</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Mật khẩu</string>
    <string name="forgot_password_txt">Quên mật khẩu</string>
    <string name="login_txt">Đăng Nhập</string>
    <string name="register_now_txt">Chưa có tài khoản ? Đăng ký</string>
    <string name="home_txt">Trang chủ</string>
    <string name="favorite_txt">Yêu thích</string>
    <string name="menu_txt">Menu</string>
    <string name="history_txt">Lịch sử</string>
    <string name="see_more_txt">Xem thêm >>></string>
    <string name="me_txt">Tôi</string>
    <string name="filter_txt">Phân loại</string>
    <string name="new_novel_txt">Truyện Mới</string>
    <string name="suggest_novel_txt">Có Thể Bạn Sẽ Thích</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mainff">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="suggest_txt">ĐỀ XUẤT</string>
    <string name="tab_item_txt">ĐỀ XUẤT</string>
    <string name="explore_txt">KHÁM PHÁ</string>
    <string name="novel_detail_txt">Chi tiết</string>
    <string name="chapter_txt">Chương</string>
    <string name="new_txt">Mới nhất</string>
    <string name="old_txt">Cũ nhất</string>
    <string name="send_txt">Gửi</string>
    <string name="vote_txt">Đánh giá:()</string>
    <string name="repassword_txt">Nhập lại mật khẩu</string>
    <string name="full_name_txt">Họ và Tên</string>
    <string name="register_txt">Đăng ký</string>
    <string name="bookmark_txt">Tủ Sách</string>
    <string name="profile_txt">Thông Tin Cá Nhân</string>
    <string name="unlike_txt">Bỏ Thích</string>
    <string name="like_txt">Yêu Thích</string>
    <string name="end_txt">Hoàn thành</string>
    <string name="update_txt">Đang cập nhật</string>
    <string name="author_ta_txt">Thien An</string>
    <string name="search_now_txt">Tìm kiếm truyện</string>
    <string name="search_hint_txt">Tìm kiếm truyện</string>
    <string name="login_now_txt">Đã có tài khoản? Đăng nhập</string>
    <string name="forgot_password_btn_txt">Lấy lại mật khẩu</string>
    <string name="back_txt">Trở lại</string>
    <string name="defaut_color">#00000000</string>
    <string name="white_color">#FFFFFF</string>
    <string name="popular_color">#4896f0</string>
    <string name="tab_layout_color">#323131</string>
    <string name="example_txt">Tổng hợp</string>
    <string name="vote_default_txt">Đánh giá:(%s)</string>
    <string name="bad_txt">Tệ</string>
    <string name="medium_txt">Trung Bình</string>
    <string name="good_txt">Tốt</string>
    <string name="thank_to_vote_txt">Cảm ơn bạn đã đánh giá</string>
    <string name="defaut_read_txt">100K</string>
    <string name="sort_defaut_color">#8A8383</string>
    <string name="update_info_txt">Cập nhật thông tin</string>
    <string name="logout_txt">Đăng xuất</string>
    <string name="info_txt">Thông tin</string>
    <string name="profile_email_txt">Địa chỉ Email</string>
    <string name="gender_txt">Giới tính</string>
    <string name="birth_day_txt">Sinh nhật</string>
    <string name="confirm_logout_txt">Bạn có muốn đăng xuất ?</string>
    <string name="must_login_txt">Đăng nhập để tiếp tục ?</string>
    <string name="update_now_txt">Cập nhật</string>
    <string name="choice_img_txt">Chọn ảnh</string>
    <string name="cancel_txt">Hủy</string>
    <string name="boy_txt">Nam</string>
    <string name="girl_txt">Nữ</string>
    <string name="other_txt">Khác</string>
    <string name="login_success_txt">Đăng nhập thành công</string>
    <string name="register_success_txt">Đăng ký thành công</string>
    <string name="register_fail_txt">Đăng ký thất bại</string>
    <string name="login_fail_txt">Đăng nhập thất bại</string>
    <string name="nickname_txt">nickname</string>
    <string name="favorite_tab_txt">YÊU THÍCH</string>
    <string name="current_view_tab_txt">VỪA XEM</string>
    <string name="something_error_txt">Lỗi, vui lòng thử lại</string>
</resources>