<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="36.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!-- INPUT -->
            <com.myproject.novel.local.util.customfonts.EditText_Poppins_Regular
                android:id="@+id/username_input"
                android:hint="@string/email_txt"
                android:textSize="12sp"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/email_icon" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/email_icon"
                android:src="@drawable/email"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_marginLeft="17dp"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="12.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!-- INPUT -->
            <com.myproject.novel.local.util.customfonts.EditText_Poppins_Regular
                android:id="@+id/full_name"
                android:layout_toEndOf="@+id/username1_icon"
                android:hint="@string/full_name_txt"
                android:textSize="12sp"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/username1_icon"
                android:src="@drawable/email"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_marginStart="17dp"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="12.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!-- INPUT -->
            <com.myproject.novel.local.util.customfonts.EditText_Poppins_Regular
                android:id="@+id/pass"
                android:hint="@string/password_txt"
                android:textSize="12sp"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:maxLines="1"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:maxLength="10"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/password_icon" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/password_icon"
                android:src="@drawable/password"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_marginStart="17dp"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="12.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!-- INPUT -->
            <com.myproject.novel.local.util.customfonts.EditText_Poppins_Regular
                android:id="@+id/re_pass"
                android:layout_toEndOf="@+id/icon"
                android:hint="@string/repassword_txt"
                android:textSize="12sp"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:maxLines="1"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:maxLength="10"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/icon"
                android:src="@drawable/password"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_marginStart="17dp"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <com.myproject.novel.local.util.customfonts.MyTextView_Poppins_Medium
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/popular"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="18.7dp"
            android:text="@string/register_txt"
            android:background="@drawable/blue_fill__rounded_color" />

        <com.myproject.novel.local.util.customfonts.MyTextView_Poppins_Medium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10.5sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/goto_login"
            android:text="@string/login_now_txt" />

    </LinearLayout>

</RelativeLayout>