<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="36.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!-- INPUT -->
            <com.myproject.novel.local.util.customfonts.EditText_Poppins_Regular
                android:id="@+id/email"
                android:layout_toEndOf="@+id/username_icon"
                android:hint="@string/email_txt"
                android:textSize="12sp"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/username_icon"
                android:src="@drawable/email"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_marginLeft="17dp"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="12.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loading_submit"
                android:layout_gravity="end"
                android:layout_alignTop="@+id/reset_btn"
                android:layout_alignEnd="@+id/reset_btn" />

            <com.myproject.novel.local.util.customfonts.MyTextView_Poppins_Medium
                android:id="@+id/reset_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/popular"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:layout_marginLeft="62dp"
                android:layout_marginRight="62dp"
                android:text="@string/forgot_password_btn_txt"
                android:background="@drawable/blue_fill__rounded_color" />
        </RelativeLayout>

        <com.myproject.novel.local.util.customfonts.MyTextView_Poppins_Medium
            android:id="@+id/go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10.5sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/back_txt" />
    </LinearLayout>

</RelativeLayout>